--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="https://matchalatte242.github.io/StypendiumSlaskie/Liniowe_Light/" target="_blank">Aplikacja internetowa rozwiązujaca jeden z problemów programowania liniowego - wersja Light</a></li>
             <li><a href="https://matchalatte242.github.io/StypendiumSlaskie/Liniowe_Extra_Light/" target="_blank">Aplikacja internetowa rozwiązujaca jeden z problemów programowania liniowego - wersja Extra Light</a></li>
         </ol>
+        <br><a href="https://matchalatte242.github.io/Main/">Powróć do Moich repozytoriów</a>
     </main>
 
     <footer>
